# raiffeisen_chatbot_challende

./: LICENSE  README.md
raifbot/: .gitignore  LICENSE  README.md  docker-compose.yml  install_docker_compose.sh  nginx.conf  pyproject.toml
raifbot/.streamlit/: config.toml
raifbot/backend/: Dockerfile  config.py  entry.sh  main.py  models.py  mongo_db.py  pytest.ini
raifbot/backend/routers/: chat_history.py  generation.py
raifbot/backend/utils/: callback_handler_agent.py  dependencies_chat_history.py  dependencies_generation.py  error_handler.py
raifbot/frontend/: Dockerfile  config.py  main.py
raifbot/frontend/routers/: common.py  ibm_generative_sdk.py  initialization.py  intro.py
raifbot/frontend/utils/: chat_history_api_client.py  retrieve_function.py
raifbot/tests/: test_chat_history.py  test_generation.py
research/: 1.EDA.ipynb  2.Upload_to_VectorDB.ipynb  3.RAG.ipynb
research/data/: pinterest-fashion-dataset_preprocessed.csv
